# doit-ext

./: .codespellrc  .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.rst  default.nix  dodo.py  flake.nix  noxfile.py  per-system.nix  pre-commit.nix  pyproject.toml
.github/workflows/: docs.yaml  main.yaml  nix.yaml  poetry.yaml
docs_src/: conf.py  index.rst
doit_ext/: __init__.py  compose.py  paths.py  utils.py
examples/: README.rst
tests/: __init__.py  _profile.py  test_compose.py  test_integration.py  test_paths.py
tests/test_compose/: test_composetask.yml
