[tool.poetry]
name = "doit-ext"
version = "0.0.0"
description = "Utilities for doit task specification."
authors = ["nialov <nikolasovaskainen@gmail.com>"]
readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
homepage = "https://github.com/nialov/doit-ext"
repository = "https://github.com/nialov/doit-ext"
documentation = "https://doit-ext.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "python",
    "development",
    "cli",
    "utility",
]
# See https://pypi.org/classifiers/
classifiers = [
    "Environment :: Plugins"
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
doit = {extras = ["toml"], version = "^0.36.0"}

# Extras
# Coverage
coverage = {version = "*", optional = true}
coverage-badge = {version = "*", optional = true}

# Docs
sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}
sphinx-gallery = {version = "*", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx-autobuild = {version = "*", optional = true}

# Linting
pylint = {version = "*", optional = true}
rstcheck = {version = "*", optional = true}
markupsafe = {version = "*", optional = true}

# Typecheck
mypy = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
# TODO: copier could be installed outside the poetry environment
doit = "*"
ipython = "*"
jupyterlab = "*"
nox = "*"
pre-commit = "*"
pytest = "*"
toml = "*"
pytest-regressions = "^2.4.1"

[tool.poetry.extras]
coverage = ["coverage", "coverage-badge"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild"
]
lint = [
    "pylint",
    "rstcheck",
    "sphinx",
    "markupsafe",
]
typecheck = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "*.py",
    "*/__init__.py",
    "*/__version__.py",
    "*/_version.py",
    "./CITATION.cff",
]
patterns = [
    "(^__version__\\s*=\\s*['\"])[^'\"]*(['\"])",
    "(^version:\\s*['\"])[^'\"]*(['\"])",
]

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "doit_ext",
    ]
addopts = "--doctest-modules"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["doit_ext", "tests"]

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",
    "C0302",
    "R0902",
    "R0913",
    "R0914",
    "R1735",
    "W0212",
    "W0621",
    "W0703",
    "W1203",
    ]

[tool.pylint.similarities]
ignore-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
