[tool.poetry]
name = "doit-ext"
version = "0.0.1"
description = "Utilities for doit task specification."
authors = ["nialov <nikolasovaskainen@gmail.com>"]
readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
homepage = "https://github.com/nialov/doit-ext"
repository = "https://github.com/nialov/doit-ext"
documentation = "https://doit-ext.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "python",
    "development",
    "cli",
    "utility",
]
# See https://pypi.org/classifiers/
classifiers = [
    "Environment :: Plugins"
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
doit = {extras = ["toml"], version = ">=0.36.0"}


[tool.poetry.dev-dependencies]
ipython = "*"
pytest = "*"
toml = "*"
pytest-regressions = "*"
mypy = "*"
pylint = "*"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "doit_ext",
    ]
addopts = "--doctest-modules"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["doit_ext", "tests"]

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",
    "C0302",
    "R0902",
    "R0913",
    "R0914",
    "R1735",
    "W0212",
    "W0621",
    "W0703",
    "W1203",
    ]

[tool.pylint.similarities]
ignore-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.codespell]
ignore-words-list = ["uptodate"]
